--- a/NEURODASH/assets/css/pages/creditos.css
+++ b/NEURODASH/assets/css/pages/creditos.css
@@ -32,7 +32,7 @@ body{
 .credits {
     color: #fff;
     text-align: center;
-    animation: scroll 15s linear infinite;
+    animation: scroll 25s linear infinite;
 }
 
 .credits h2, .credits p {
@@ -49,6 +49,10 @@ body{
 }
 
 .home-back{
+    background-image: url(../../img/iconos/home.png);
+    background-size:cover;
+    width: 50px;
+    height: 50px;
     position: absolute;
     top: 10px;
     left: 10px;
