--- a/NEURODASH/views/creditos/credito.html
+++ b/NEURODASH/views/creditos/credito.html
@@ -14,51 +14,57 @@
 <body class="background-creditos">
     <div class="container animacion mt-5 d-flex justify-content-center text-center">
         <div class="credits_logo background-logo"></div>
-        <a  href="../home.html" type="button" class="home-back">back</a>
         <div class="credits-container">
+            <a  href="../home.html" type="button" class="home-back"></a>
             <div class="credits">
-                <h1>Créditos</h1>
-                 <br>
-                <h2>Participantes</h2>
+                <div class="credits">
+                    <h1>Créditos</h1>
+                    <br>
+                    
+                    <h2>Participantes</h2>
+                        <p>Andrés Felipe Trespalacios Pérez</p>
+                        <p>Brayan Santiago Guerrero Méndez</p>
+                        <p>Jesús Fernando Carvajal Anacona</p>
+                        <p>Karol Natalia Osorio Poveda</p>
+                    <br>
+                    
+                    <h2>Roles y Responsabilidades</h2>
+                    
+                    <h3>Backend</h3>
+                        <p>Brayan Santiago Guerrero Méndez</p>
+                        <p>Jesús Fernando Carvajal Anacona</p>
+                    
+                    <h3>Frontend</h3>
+                        <p>Andrés Felipe Trespalacios Pérez</p>
+                        <p>Karol Natalia Osorio Poveda</p>
+                    
+                    <h3>Documentación</h3>
+                        <p>Andrés Felipe Trespalacios Pérez</p>
+                        <p>Brayan Santiago Guerrero Méndez</p>
+                        <p>Jesús Fernando Carvajal Anacona</p>
+                        <p>Karol Natalia Osorio Poveda</p>
+                    
+                    <h3>Diseño</h3>
+                    <p>Arte, imágenes, tipografía y mockups: Todo el equipo colaboró en esta área.</p>
+                    
+                    <br>
+                    
+                    <h2>Componentes Tecnológicos</h2>
+                    <h3>Framework</h3>
+                        <p>Bootstrap</p>
+                        <p>fontawesome</p>
+                    <br>
+                    
+                    <h2>Música y Sonido</h2>
+                    <p>Composición y efectos por definir...</p>
+                    <p>Propuesta musical generada mediante recursos de Creative Commons.</p>
+                    <br>
 
-                <p>ANDRES FELIPE TRESPALACIOS PEREZ</p>
-                <P>BRAYAN SANTIAGO GUERRERO MENDEZ</P>
-                <p>JESUS FERNANDO CARVAJAL ANACONA</p>
-                <p>KAROL NATALIA OSORIO POVEDA</p>
-                <br>
-
-                <h2>Backend</h2>
-
-                <p>BRAYAN SANTIAGO GUERRERO MENDEZ</p>
-                <p>JESUS FERNANDO CARVAJAL ANACONA</p>
-                <br>
-
-                <h2>FRONTEND</h2>
-
-                <p>ANDRES FELIPE TRESPALACIOS PEREZ</p>
-                <p>KAROL NATALIA OSORIO POVEDA</p>
-                <br>
-
-                <h2>DOCUMENTACION</h2>
-
-                <p>ANDRES FELIPE TRESPALACIOS PEREZ</p>
-                <P>BRAYAN SANTIAGO GUERRERO MENDEZ</P>
-                <p>JESUS FERNANDO CARVAJAL ANACONA</p>
-                <p>KAROL NATALIA OSORIO POVEDA</p></p>
-                <br>
+                    <h2>Agradecimientos</h2>
+                    <p>Este proyecto no habría sido posible sin el apoyo de nuestros mentores y la colaboración del equipo.</p>
+                    <br>
+                </div>
                 
-                <h2>Diseño</h2>
-                
-                <p>ARTE, IMAGENES, TIPOGRAFIA Y MOCKUP</p>
-                <br>
-                <h2>Componentes</h2>
-                <h3>Framework</h3>
-                <p>BOOTSTRAP</p>
-                <br>
-                <h2>Musica.Sonido</h2>
-                <p>....</p>
-            </div>
-        </div>
     </div>
     
 </body>
