--- a/NEURODASH/assets/css/pages/ranking.css
+++ b/NEURODASH/assets/css/pages/ranking.css
@@ -1,5 +1,3 @@
-
-
 .cardPd{
     display: grid;
     /* grid-template-columns: 0.3fr 2.2fr 0.5fr; */
@@ -179,12 +177,12 @@
     height: 600px;
     /* background-color: #29242770; */
     /* backdrop-filter: blur(4px); */
-    border-radius:  80px 0px 80px 0px;
+    /* border-radius:  80px 0px 80px 0px; */
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    animation: neon 1.5s ease-in-out infinite alternate; 
+    /* animation: neon 1.5s ease-in-out infinite alternate;  */
     box-shadow: 0 0 21px rgb(0, 0, 0);
     box-sizing: border-box;
     /* background: black; */
@@ -227,10 +225,6 @@
 
 .tituloPo {
   border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
   font-weight: bold;
   font-family: 'Jersey';
   line-height: 1.5;
@@ -287,7 +281,7 @@
 
   
   
-  @keyframes neon {
+  /* @keyframes neon {
     0% {
         box-shadow: 0 0 5px rgba(255, 0, 255, 0.5),
                     0 0 10px rgba(255, 0, 255, 0.5),
@@ -298,7 +292,7 @@
                     0 0 10px rgba(255, 0, 255, 1),
                     0 0 20px rgba(255, 0, 255, 1);
     }
-}
+} */
 
 
 
