--- a/NEURODASH/assets/css/pages/home.css
+++ b/NEURODASH/assets/css/pages/home.css
@@ -427,7 +427,7 @@
   width: max-content;
   text-align: center;
   padding: 5px 5px;
-  background-color: #7e44ad00;
+  background-color: rgb(255 255 255 / 41%);
   border-radius: 8px;
   /* border: 2px solid rgba(177, 177, 177, 0.4); */
   /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2); */
@@ -436,8 +436,6 @@
   transition: all 0.5s linear;
   font-size: 25px;
   
-
-  font-weight: bold;
   font-family: 'Jersey';
   text-shadow: 2px 2px 5px rgba(235, 227, 227, 0.596);
   color: #161416 ;
