--- a/NEURODASH/views/juego/salaEspera.html
+++ b/NEURODASH/views/juego/salaEspera.html
@@ -15,7 +15,7 @@
 
   <style>
 
-    .modal-content {
+    .modal-content .container-chatEspera{
       background: #f7f9fc;
       border-radius: 15px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -26,15 +26,6 @@
       border: 2px solid rgb(16, 19, 16);
       animation: neon 1.5s ease-in-out infinite alternate; 
 
-    }
-    
-    .modal-header {
-      background: #4f72e700;
-      color: #fff;
-      font-size: 20px;
-      font-weight: bold;
-      text-align: center;
-      padding: 20px;
     }
     
     #mensajes-div{
@@ -229,11 +220,9 @@
 
     #room-info{
       color: white;
-    }
-
-    
-    
+    }    
   </style>
+
 </head>
 <body class='backgound-uno'>
   <div class="salirSala ">
@@ -269,13 +258,12 @@
 <!-- Modal del Chat -->
 <div class="modal fade" id="chatModal" tabindex="-1" aria-labelledby="chatModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
+    <div class="modal-content container-chatEspera">
       <!-- Header del Modal -->
         <div class="d-flex justify-content-center align-items-center cabe flex-column">
           <h5 class="modal-title fontSalas2" id="chatModalLabel">Neuro Chat</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           <div class="re"></div>
-
         </div>
 
       <!-- Cuerpo del Modal -->
@@ -284,7 +272,7 @@
         <div class="info">
           <div id="room-info"></div>
         </div>
-
+        
         <!-- Área del Chat -->
           <div id="mensajes-div"></div>
 
