--- a/NEURODASH/views/entrenamiento/entrenamiento.html
+++ b/NEURODASH/views/entrenamiento/entrenamiento.html
@@ -178,6 +178,8 @@
   <!-- controlador items o tematica  -->
   <script src="../../controller/entrenamiento/tematica.js"></script>
 
+  <script type="module" src="../../assets/js/entrenamiento/music.js"></script>
+
   <script type="module" src="../../assets/js/sound/controlles.js"></script>
 
 
