--- a/NEURODASH/views/forms/login.html
+++ b/NEURODASH/views/forms/login.html
@@ -59,7 +59,7 @@
                     <input type="text" class="disabled-input" placeholder="User name" name="txtUsernameB" id="txtUsernameB" max="30" disabled  required>
                 </div>
                 
-                <input type="submit" class="comic-button" value="Registrarse">
+                <input type="submit" class="comic-button sound-sys" value="Registrarse">
                 <p class="account-text">Already have an account? <a href="#" id="sign-in-btn2">Sign in</a></p>
             </form>
         </div>
@@ -69,7 +69,7 @@
                 <div class="content">
                     <h3>¿Ya tienes cuenta?</h3>
                     <p>Inicia sesión en NeuroDash y continúa tu aventura.</p>
-                    <button class="btn" id="sign-in-btn">Iniciar sesión</button>
+                    <button class="btn sound-sys" id="sign-in-btn">Iniciar sesión</button>
                 </div>
             </div>
             <div class="panel right-panel">
