--- a/NEURODASH/views/home.html
+++ b/NEURODASH/views/home.html
@@ -27,7 +27,7 @@
       <div class="container-fluid">
         
         <!-- Información de usuario -->
-        <div class="dropdown usuario mx-lg-5">
+        <div class="dropdown usuario mx-lg-5 sound-sys">
           <button type="button" class="btn fondo-btn btn-nav" data-bs-toggle="dropdown" aria-expanded="false" aria-label="Menú de usuario">
             <img class="avatar-user" src="../assets/img/iconos-desarrollo/icono-user.svg" alt="Icono de usuario" />
             <span class="m-2 name_user">---</span>
@@ -82,21 +82,21 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <!-- Opciones adicionales (Historial, Notificaciones, Configuraciones) -->
-              <li class="nav-item m-1">
+              <li class="nav-item m-1 sound-sys">
                 <div class="dropdown">
                   <a href="creditos/credito.html" class="btn fondo-btn btn-nav">
                     <img class="icon-home" src="../assets/img/iconos-desarrollo/creditos.png" alt="Historial" />
                   </a>
                 </div>
               </li> 
-              <li class="nav-item m-1">
+              <li class="nav-item m-1 sound-sys">
                 <div class="dropdown">
                   <a href="entrenamiento/tutorialEntrenamiento.html" class="btn fondo-btn btn-nav">
                     <img class="icon-home" src="../assets/img/iconos-desarrollo/info.png" alt="Historial" />
                   </a>
                 </div>
               </li>
-            <li class="nav-item m-1">
+            <li class="nav-item m-1 sound-sys">
               <a href="config/configStart.html" class="btn fondo-btn btn-nav">
                 <img class="icon-home" src="../assets/img/iconos/config.png" alt="Configuración" />
               </a>
