--- a/NEURODASH/views/juego/pasaPalabras/pasaPalabras.html
+++ b/NEURODASH/views/juego/pasaPalabras/pasaPalabras.html
@@ -73,7 +73,7 @@
     </div>
 
 
-    <script src="../../../assets/js/page/pasaPalabras.js"></script>
+    <script type="module" src="../../../assets/js/page/pasaPalabras.js"></script>
 </body>
 
 </html>
