--- a/NEURODASH/views/topi-memori/topiMemori.html
+++ b/NEURODASH/views/topi-memori/topiMemori.html
@@ -61,7 +61,7 @@
     </div>
   </div>
   <script src="../../lib/bootstrap/js/bootstrap.js"></script>
-  <script src="../../assets/js/page/topi.js"></script>
+  <script type="module" src="../../assets/js/page/topi.js"></script>
   <!-- <script src="../../assets/js/entrenamiento/animacion1.js"></script> -->
 
   <!-- <script type="module" src="../../assets/js/main.js"></script> -->
